Trying to do add Recipes List

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,8 @@
       <a href="/auth/sign-in">Sign in</a>.
     </p>
   <% } %>
+  <p><a href="/recipes/">Browse</a></p>
+  <p><a href="/recipes/new">Create a Recipe!</a></p>
   <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
 </body>
 </html>
