--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1>Welcome to My Recipes</h1>
-    <a href="recipes/new">Add New Recipe</a>
+    <a href="/new">Add New Recipe</a>
+    <p>Your Recipes</p>
+    <ul>
+       <li>
+        <!-- <%= recipe.name %> -->
+       </li> 
+    </ul>
   </body>
 </html>
